# reflex-websocket-interface

./: README.md  default.nix
example/: Main.hs  default.nix  example.cabal  shell.nix
example/app/: Main.hs  default.nix  example.cabal  shell.nix
example/pushResponse/app/: Main.hs  shell.nix
example/pushResponse/server/: Main.hs  default.nix  shell.nix
example/pushResponse/shared/: ChangeLog.md  Shared.hs  default.nix  shared.cabal
example/server/: ChangeLog.md  Main.hs  server.cabal  shell.nix
example/shared/: Shared.hs  default.nix  shared.cabal
frontend/: default.nix  reflex-websocket-interface.cabal
frontend/Reflex/WebSocket/WithWebSocket/: Base.hs  Class.hs
generictry/: Main.hs
ghcissue/: Main.hs  Shared.hs  server.cabal
reflex/: reflex-websocket-interface.cabal
reflex/Reflex/Dom/WebSocket/: Monad.hs
server/: ChangeLog.md  LICENSE  reflex-websocket-interface-server.cabal
server/Reflex/Dom/WebSocket/: Server.hs
server/Reflex/WebSocket/WithWebSocket/: Server.hs
shared/: default.nix  reflex-websocket-interface-shared.cabal
shared/Reflex/Dom/WebSocket/: Message.hs
shared/Reflex/WebSocket/WithWebSocket/: Shared.hs
typeclassbased/example/app/: shell.nix
typeclassbased/example/server/: Main.hs  default.nix  server.cabal  shell.nix
typeclassbased/example/shared/: Shared.hs
typeclassbased/frontend/Reflex/WebSocket/WithWebSocket/: Base.hs
typeclassbased/server/: default.nix  reflex-websocket-interface-server.cabal
typeclassbased/server/Reflex/WebSocket/WithWebSocket/: Server.hs
typeclassbased/shared/: reflex-websocket-interface-shared.cabal
typeclassbased/shared/Reflex/WebSocket/WithWebSocket/: Shared.hs
