name: reflex-websocket-interface
version: 0.1.0
cabal-version: >=1.10
build-type: Simple
copyright: 2017 Divam Narula <dfordivam@gmail.com>
maintainer: Divam Narula <dfordivam@gmail.com>
author: Divam Narula <dfordivam@gmail.com>
extra-source-files:
  README.md

source-repository head
  type:     git
  location: https://github.com/dfordivam/reflex-websocket-interface

library
  hs-source-dirs:      ./.
  exposed-modules:
    Reflex.WebSocket.WithWebSocket.Class
    Reflex.WebSocket.WithWebSocket.Base
  other-modules:

  build-depends:
      base
    , text
    , reflex
    , reflex-dom
    , dependent-map
    , dependent-sum
    , bytestring
    , aeson
    , mtl
    , primitive
    , prim-uniq
    , containers
    , reflex-websocket-interface-shared
  default-language:    Haskell2010
  ghc-options: -fno-warn-missing-signatures

  if impl(ghcjs)
    build-depends: ghcjs-base