name: reflex-websocket-interface
version: 0.1.0
cabal-version: >=1.10
build-type: Simple
copyright: 2017 Divam Narula <dfordivam@gmail.com>
maintainer: Divam Narula <dfordivam@gmail.com>
author: Divam Narula <dfordivam@gmail.com>
extra-source-files:

source-repository head
  type:     git
  location: https://github.com/dfordivam/reflex-websocket-interface

library
  hs-source-dirs:      ./.
  exposed-modules:
    Reflex.Dom.WebSocket.Monad
  other-modules:

  build-depends:
      base
    , text
    , reflex
    , reflex-dom-core
    , dependent-map
    , dependent-sum
    , bytestring
    , aeson
    , mtl
    , primitive
    , prim-uniq
    , containers
    , reflex-websocket-interface-shared
    , these
  default-language:    Haskell2010
  ghc-options: -fno-warn-missing-signatures

  if impl(ghcjs)
    build-depends: ghcjs-base