name:                reflex-websocket-interface-server
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Divam
maintainer:          dfordivam@gmail.com
-- copyright:
category:            Web
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Reflex.Dom.WebSocket.Server
  -- other-modules:
  other-extensions:    TypeOperators, MultiParamTypeClasses, GADTs
  build-depends:       base >=4.9 && <5
                      , aeson
                      , bytestring
                      , reflex-websocket-interface-shared
  -- hs-source-dirs:
  default-language:    Haskell2010
